feat:매장 조회 시 핫딜, 관심매장 표시